# simple-cpp-sorting

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/TemplateProject/: main.hpp
src/: main.cpp
utilities/include/utilities/: lib.hpp
utilities/src/: lib.cpp
